# sem5-Magazyn

./: CMakeLists.txt  README.md  main.cpp
controllers/: AppController.cpp  AppController.h
controllers/databases/: AdminDatabase.cpp  AdminDatabase.h  ManagerDatabase.cpp  ManagerDatabase.h  ReceivingWorkerDatabase.cpp  ReceivingWorkerDatabase.h  WarehouseWorkerDatabase.cpp  WarehouseWorkerDatabase.h
controllers/roles/: AdminController.cpp  AdminController.h  ManagerController.cpp  ManagerController.h  ReceivingWorker.cpp  ReceivingWorker.h  ReceivingWorkerController.cpp  ReceivingWorkerController.h  WarehouseWorkerController.cpp  WarehouseWorkerController.h
tests/functional_tests/: ManagerFunctionalTest.cpp  ManagerFunctionalTest.h  MockMainWindow.cpp  MockMainWindow.h  ReceivingWorkerFunctionalTest.cpp  ReceivingWorkerFunctionalTest.h  WarehouseWorkerFunctionalTest.cpp  WarehouseWorkerFunctionalTest.h  main.cpp
tests/unit_tests/: ManagerViewTests.cpp  ManagerViewTests.h  ReceivingWorkerTests.cpp  ReceivingWorkerTests.h  main.cpp
widgets/: LoginView.cpp  LoginView.h  MainWindow.cpp  MainWindow.h
widgets/admin/: AdminEmployeesView.cpp  AdminEmployeesView.h  AdminMainMenuView.cpp  AdminMainMenuView.h
widgets/manager/: ManagerEmployeesView.cpp  ManagerEmployeesView.h  ManagerLogsView.cpp  ManagerLogsView.h  ManagerMainMenuView.cpp  ManagerMainMenuView.h  ManagerOrderView.cpp  ManagerOrderView.h  ManagerOrdersListView.cpp  ManagerOrdersListView.h  ManagerVehiclesView.cpp  ManagerVehiclesView.h
widgets/receivingworker/: ReceivingWorkerDeliveryListView.cpp  ReceivingWorkerDeliveryListView.h  ReceivingWorkerDeliveryView.cpp  ReceivingWorkerDeliveryView.h  ReceivingWorkerMainMenuView.cpp  ReceivingWorkerMainMenuView.h  ReceivingWorkerOrderListView.cpp  ReceivingWorkerOrderListView.h
widgets/styles/: style.qss
widgets/warehouseworker/: WarehouseWorkerMainMenuView.cpp  WarehouseWorkerMainMenuView.h  WarehouseWorkerOrderView.cpp  WarehouseWorkerOrderView.h
